--- a/style.css
+++ b/style.css
@@ -34,6 +34,19 @@ button {
   font-size: 1rem;
 }
 
+a {
+  color: #0099ff;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+code {
+  font-family: monospace;
+  font-size: 1.25rem;
+}
+
 /**************/
 /* Layout *****/
 /**************/
